Fix for overlapping datepicker.

--- a/css/app/calendarlist.css
+++ b/css/app/calendarlist.css
@@ -303,7 +303,6 @@
 #scrollable {
 	overflow-y: auto;
 	overflow-x: hidden;
-	position: absolute;
 	top: 85px;
 	bottom: 44px;
 	width: 250px;
